# jabcode-rs

./: .gitmodules  Cargo.toml  LICENSE  README.md  build.rs
examples/: read.rs  write.rs
src/: jabcode.rs  lib.rs
src/read/: error.rs  mod.rs
src/write/: encode.rs  error.rs  mod.rs  option.rs
