[package]
name = "jabcode"
description = "Bindings for the JAB code reference implementation"
repository = "https://github.com/IGI-111/jabcode-rs"
license = "LGPL-2.1-only"
version = "1.1.0"
edition = "2021"

[dependencies]
image = "0.24.3"
libc = "0.2.126"
num_enum = "0.5.7"
thiserror = "1.0.31"

[build-dependencies]
cc = "1.0.73"
